crates/shell-parser/tests/snapshots/parser_snapshots__assignments__empty_value.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
expression: "parse(\"FOO=\")"
---
Assignment(
    Assignment {
        name: "FOO",
        value: Scalar(
            Word {
                parts: [
                    Literal(
                        "",
                    ),
                ],
            },
        ),
        scope: Bare,
    },
)
