crates/shell-parser/tests/snapshots/parser_snapshots__assignments__standalone.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"FOO=bar\")"
---
Assignment(
    Assignment {
        name: "FOO",
        value: Scalar(
            Word {
                parts: [
                    Literal(
                        "bar",
                    ),
                ],
            },
        ),
    },
)
