crates/shell-parser/tests/snapshots/parser_snapshots__assignments__with_command.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
expression: "parse(\"FOO=bar cmd arg\")"
---
Simple(
    SimpleCommand {
        assignments: [
            Assignment {
                name: "FOO",
                value: Scalar(
                    Word {
                        parts: [
                            Literal(
                                "bar",
                            ),
                        ],
                    },
                ),
                scope: Prefix,
            },
        ],
        words: [
            Word {
                parts: [
                    Literal(
                        "cmd",
                    ),
                ],
            },
            Word {
                parts: [
                    Literal(
                        "arg",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
